--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.0.11",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
+    "vue-amap": "^0.4.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
