--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-amap": "^0.4.5",
+    "vue-quill-editor": "^3.0.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
