--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "element-ui": "^2.1.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-amap": "^0.4.5",
