--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "shelljs": "^0.8.1",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "url-loader": "^0.6.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-jest": "^2.0.1",
     "vue-loader": "^14.1.1",
     "vue-style-loader": "^3.1.2",
